...
                contentPadding = PaddingValues(vertical = 8.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
                horizontalArrangement = Arrangement.spacedBy(16.dp),
                state = gridState,
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("albums_grid")
            ) {
                items(
                    items = albumsState,
                    key = { it.id },
                    contentType = { "album_card" }
                ) { album ->
...
